--- a/arkade/src/styles.css
+++ b/arkade/src/styles.css
@@ -7,5 +7,7 @@ body {
 
 body {
     margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    /* font-family: Roboto, "Helvetica Neue", sans-serif; */
+    font-family: 'Comfortaa', cursive !important;
+    background-color: goldenrod !important;
 }
