--- a/arkade/src/app/components/introduction/introduction.component.css
+++ b/arkade/src/app/components/introduction/introduction.component.css
@@ -1,6 +1,41 @@
 .full-page {
-    width: 100%;
-    height: 200vh;
+    background-color: #E7ECE5;
+}
+
+.circle {
     position: relative;
-    background-color: bisque;
+    width: 220px;
+    height: 220px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    position: absolute;
+    width: 160px;
+    height: 160px;
+    background-color: #537D8D;
+    border-radius: 50%;
+}
+
+.text {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    animation: rotateText 10s linear infinite;
+}
+
+@keyframes rotateText {
+    0% {
+        transform: rotate(360deg);
+    }
+}
+
+.rotation-text{
+    position: absolute;
+    left: 50%;
+    font-size: 1.2em;
+    transform-origin: 0 110px;
 }
