--- a/arkade/src/styles.css
+++ b/arkade/src/styles.css
@@ -8,6 +8,16 @@ body {
 body {
     margin: 0;
     /* font-family: Roboto, "Helvetica Neue", sans-serif; */
-    font-family: 'Comfortaa', cursive !important;
-    background-color: goldenrod !important;
+    font-family: 'Comfortaa', cursive;
+    background-color: goldenrod;
+}
+
+.full-page {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
