--- a/arkade/src/app/components/introduction/introduction.component.html
+++ b/arkade/src/app/components/introduction/introduction.component.html
@@ -1,13 +1,11 @@
 <section class="full-page my-auto">
     <div class="">
         <div class="circle">
-            <div class="logo"></div>
+            <div class="logo" [style.background]="logoColor"></div>
             <div class="text">
-                <p >
-                    <!-- <span class="rotation-text" *ngFor="let char of text.split(''); let i = index" 
-                        [ngStyle]="{'transform': rotate({{i*5}}deg) }"> -->
-                        <span class="rotation-text" *ngFor="let char of text.split(''); let i = index" [style.transform]="'rotate('+ (i*9.5) +'deg)'">
-                        {{char}} 
+                <p>
+                    <span class="rotation-text" *ngFor="let char of text.split(''); let i = index" [style.transform]="'rotate('+ (i*9.5) +'deg)'">
+                        {{char}}
                     </span>
                 </p>
             </div>
