--- a/arkade/src/app/app.component.html
+++ b/arkade/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
 <app-introduction></app-introduction>
-<app-about></app-about>
+<app-about id="about"></app-about>
+<app-business id="business"></app-business>
+<app-contact id="contact"></app-contact>
