--- a/arkade/src/app/components/introduction/introduction.component.html
+++ b/arkade/src/app/components/introduction/introduction.component.html
@@ -1,14 +1,12 @@
-<section class="full-page my-auto">
-  <div class="">
-    <div class="circle">
-      <div class="logo" [style.background]="logoColor"></div>
-      <div class="text">
-        <p>
-          <span class="rotation-text" *ngFor="let char of text.split(''); let i = index" [style.transform]="'rotate('+ (i*9.5) +'deg)'">
-            {{char}}
-          </span>
-        </p>
-      </div>
+<section class="full-page">
+  <div class="circle">
+    <div class="logo" [style.background]="logoColor"></div>
+    <div class="text">
+      <p>
+        <span class="rotation-text" *ngFor="let char of text.split(''); let i = index" [style.transform]="'rotate('+ (i*9.5) +'deg)'">
+          {{char}}
+        </span>
+      </p>
     </div>
   </div>
 </section>
