--- a/arkade/src/app/components/navbar/navbar.component.html
+++ b/arkade/src/app/components/navbar/navbar.component.html
@@ -4,19 +4,19 @@
     <div class="ms-auto" id="navbarSupportedContent">
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/about">About</a>
+          <a class="nav-link active" aria-current="page" href="#about">About</a>
         </li>
         <li class="nav-item align-middle">
           <a class="nav-link divider">&#9697;</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/about">Business</a>
+          <a class="nav-link" aria-current="page" href="#business">Business</a>
         </li>
         <li class="nav-item align-middle">
           <a class="nav-link divider">&#9696;</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">Contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
