--- a/arkade/src/app/components/business/business.component.html
+++ b/arkade/src/app/components/business/business.component.html
@@ -1,21 +1,23 @@
 <section class="full-page">
-  <h1>
+  <h1 class="mb-5">
     - Business-
   </h1>
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center mb-5">
       <div class="col-auto">
-        <p class="text-center">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-          anim id
-          est laborum.
-        </p>
+        <h3 class="text-center">
+          <a class="" href="https://www.chsinc.com/" target="_blank">CHS Inc</a>
+        </h3>
+        <div> May 2022  ---  {{now | date:'medium'}}</div>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-auto">
+        <h3 class="text-center">
+          <a class="" href="https://www.wexinc.com/" target="_blank">Wex Inc</a>
+        </h3>
+        <div> May 2017  ---  April 2022</div>
       </div>
     </div>
   </div>
