--- a/arkade/src/app/components/business/business.component.html
+++ b/arkade/src/app/components/business/business.component.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center mb-5">
       <div class="col-auto">
         <h3 class="text-center">
-          <a class="" href="https://www.chsinc.com/" target="_blank">CHS Inc</a>
+          CHS Inc
         </h3>
         <div> May 2022  ---  {{now | date:'medium'}}</div>
       </div>
@@ -15,7 +15,7 @@
     <div class="row justify-content-center">
       <div class="col-auto">
         <h3 class="text-center">
-          <a class="" href="https://www.wexinc.com/" target="_blank">Wex Inc</a>
+          Wex Inc
         </h3>
         <div> May 2017  ---  April 2022</div>
       </div>
