Updates to navbar scale trasparency color and active section color

--- a/arkade/src/app/components/business/business.component.html
+++ b/arkade/src/app/components/business/business.component.html
@@ -1,7 +1,8 @@
-<section class="full-page">
-  <h1 class="mb-5">
+<section class="full-page" id="business">
+  <h1 class="mb-0">
     - Business-
   </h1>
+  <p class="fw-lighter mb-4">--history--</p>
   <div class="container">
     <div class="row justify-content-center mb-5">
       <div class="col-auto">
