--- a/arkade/src/app/components/about/about.component.html
+++ b/arkade/src/app/components/about/about.component.html
@@ -1,16 +1,21 @@
-<section class="full-page">
-  <h1>
+<section class="full-page" id="about">
+  <h1 class=" mb-4">
     - About-
   </h1>
   <div class="container">
-    <div class="row">
-      <div class="col-auto">
+    <div class="row justify-content-center">
+      <div class="col-8">
         <p class="text-center">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est laborum.
+          Hi there! I'm a full stack developer with a passion for adventure and creativity. When I'm not coding, you can often find me scaling a rock face, hitting the trails on my bike, or experimenting with new recipes in the kitchen.
+          <br/>
+          <br/>
+          I've always been drawn to the excitement and challenge of physical activities, and I find that the same principles of problem-solving and perseverance that I apply in my coding work apply just as well to these other pursuits. Whether I'm pushing myself to conquer a difficult climb or refining my technique in the kitchen, I love the feeling of growth and progress that comes with overcoming challenges and honing my skills.
+          <br/>
+          <br/>
+          Of course, I'm just as dedicated to my work as a developer. I have a strong background in both front-end and back-end development, and I'm always looking for new ways to innovate and improve my craft. I take pride in delivering high-quality, user-friendly solutions that meet my clients' needs and exceed their expectations.
+          <br/>
+          <br/>
+          Ultimately, I believe that success in both work and play comes down to a combination of passion, persistence, and a willingness to take on new challenges. I'm excited to continue pushing myself in all areas of my life and seeing where my skills and creativity can take me.
         </p>
       </div>
     </div>
