--- a/arkade/src/app/components/home/home.component.html
+++ b/arkade/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
-<app-introduction></app-introduction>
-<app-about id="about"></app-about>
-<app-business id="business"></app-business>
-<app-contact id="contact"></app-contact>
+<div data-bs-spy="scroll">
+  <app-introduction></app-introduction>
+  <app-about id="about"></app-about>
+  <app-business id="business"></app-business>
+  <app-contact id="contact"></app-contact>
+</div>
