--- a/arkade/src/app/components/navbar/navbar.component.html
+++ b/arkade/src/app/components/navbar/navbar.component.html
@@ -1,21 +1,25 @@
-<nav class="navbar fixed-top navbar-expand">
+<nav class="navbar navbar-expand-sm fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">ar<b>KADE</b></a>
-    <div class="ms-auto" id="navbarSupportedContent">
-      <ul class="navbar-nav mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#about">About</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item ms-auto">
+          <a class="nav-link" aria-current="page" href="#about">About</a>
         </li>
-        <li class="nav-item align-middle">
+        <li class="nav-item ms-auto align-middle">
           <a class="nav-link divider">&#9697;</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#business">Business</a>
+        <li class="nav-item ms-auto">
+          <a class="nav-link" href="#business">Business</a>
         </li>
-        <li class="nav-item align-middle">
+        <li class="nav-item ms-auto align-middle">
           <a class="nav-link divider">&#9696;</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ms-auto">
           <a class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
