change button color

--- a/arkade/src/app/components/contact/contact.component.html
+++ b/arkade/src/app/components/contact/contact.component.html
@@ -23,7 +23,7 @@
             </div>
             
           </div>
-          <button class="btn btn btn-outline-secondary float-end" type="submit" [disabled]="emailForm.invalid">Send Email</button>
+          <button class="btn btn btn-outline-primary float-end" type="submit" [disabled]="emailForm.invalid">Send Email</button>
         </form>
       </div>
     </div>
